Интеграция Avito (#15)
* Интеграция Avito

* fix by review

---------
