# docs/swagger.yaml
@@ -93,6 +93,12 @@ definitions:
         description: Почта, на которую надо отправить письмо с подтверждением
         type: string
     type: object
+  avitoapimodels.VacancyAttach:
+    properties:
+      id:
+        description: 'идентификатор вакансии в виде: 3364561973'
+        type: integer
+    type: object
   dbmodels.VacancyFilter:
     properties:
       author_id:
@@ -260,6 +266,20 @@ definitions:
     x-enum-varnames:
     - VRTypeUrgent
     - VRTypeNonUrgent
+  models.VacancyPubStatus:
+    enum:
+    - Не размещена
+    - Публикуется
+    - Опубликована
+    - Отклонена
+    - Закрыта
+    type: string
+    x-enum-varnames:
+    - VacancyPubStatusNone
+    - VacancyPubStatusModeration
+    - VacancyPubStatusPublished
+    - VacancyPubStatusRejected
+    - VacancyPubStatusClosed
   models.VacancyStatus:
     enum:
     - Открыта
@@ -287,8 +307,6 @@ definitions:
       ogrn:
         type: string
       organization_name:
-        type: string
-      organization_type:
         type: string
     type: object
   spaceapimodels.CreateUser:
@@ -392,6 +410,19 @@ definitions:
         items:
           $ref: '#/definitions/vacancyapimodels.ApprovalStageData'
         type: array
+    type: object
+  vacancyapimodels.ExtVacancyInfo:
+    properties:
+      reason:
+        description: описание статуса/ошибки
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/models.VacancyPubStatus'
+        description: статус публикации
+      url:
+        description: урл вакансии
+        type: string
     type: object
   vacancyapimodels.Salary:
     properties:
@@ -1822,6 +1853,38 @@ paths:
       summary: Сгенерировать описание вакансии
       tags:
       - GPT
+  /api/v1/oauth/callback/avito:
+    get:
+      description: Аутентификация Avito
+      parameters:
+      - description: space ID
+        in: query
+        name: state
+        required: true
+        type: string
+      - description: authorization_code
+        in: query
+        name: code
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Аутентификация Avito
+      tags:
+      - Аутентификация OAuth
   /api/v1/oauth/callback/hh:
     get:
       description: Аутентификация HH
@@ -1840,12 +1903,7 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/apimodels.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/authapimodels.JWTResponse'
-              type: object
+            $ref: '#/definitions/apimodels.Response'
         "400":
           description: Bad Request
           schema:
@@ -1933,6 +1991,231 @@ paths:
       summary: Поиск по ИНН через Дадата
       tags:
       - Организации
+  /api/v1/space/ext/avito/{id}/attach:
+    put:
+      description: Привязать существующую вакансию
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: request body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/avitoapimodels.VacancyAttach'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Привязать существующую вакансию
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/{id}/close:
+    put:
+      description: Удаление вакансии
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Удаление вакансии
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/{id}/publish:
+    put:
+      description: Публикация вакансии
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Публикация вакансии
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/{id}/status:
+    put:
+      description: Статус размещения
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/apimodels.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/vacancyapimodels.ExtVacancyInfo'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Статус размещения
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/{id}/update:
+    put:
+      description: Публикация обновления по вакансии
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Публикация обновления по вакансии
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/check_connected:
+    get:
+      description: Проверка подключения к Avito
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Проверка подключения к Avito
+      tags:
+      - Интеграция Avito
+  /api/v1/space/ext/avito/connect_uri:
+    get:
+      description: Получение ссылки для авторизации
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Получение ссылки для авторизации
+      tags:
+      - Интеграция Avito
   /api/v1/space/ext/hh/{id}/attach:
     put:
       description: Привязать существующую вакансию
@@ -2033,6 +2316,43 @@ paths:
           schema:
             $ref: '#/definitions/apimodels.Response'
       summary: Публикация вакансии
+      tags:
+      - Интеграция HeadHunter
+  /api/v1/space/ext/hh/{id}/status:
+    put:
+      description: Статус размещения
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: идентификатор вакансии
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/apimodels.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/vacancyapimodels.ExtVacancyInfo'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apimodels.Response'
+      summary: Статус размещения
       tags:
       - Интеграция HeadHunter
   /api/v1/space/ext/hh/{id}/update:
